# soccer-video-analysis

./: .gitignore  CLAUDE.md  README.md  SOCCERCHAT_INTEGRATION.md  SOCCER_VISION_SPEC.md  detect_actions.py  extract_clips.py  jersey_ocr.py  pyproject.toml  register.py  requirements.txt  track.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  pipeline.rst  profiles.rst  quickstart.rst
examples/: process_match.yaml
examples/profiles/: saints-u10.yaml
label_studio/: README.md
scripts/: bas_fetch_weights.py  bas_smoke_test.py  footpass_extract_tracklets.py  footpass_fetch_data.py  footpass_infer_ours.py  footpass_visualize.py  setup_footpass_env.sh  soccerchat_smoke.py  test_leads.py
slurm/: job_ledger.md  submit_footpass_ours_ball.sh  submit_footpass_ours_maskoff.sh  submit_footpass_ours_smoke.sh  submit_soccerchat_smoke.sh  submit_trim_empty.sh
src/soccer_vision/: __init__.py
src/soccer_vision/annotate/: __init__.py  label_studio.py
src/soccer_vision/broadcast/: virtual_cam.py
src/soccer_vision/cli/: annotate.py  ask.py  describe.py  extract.py  harvest.py  identify.py  main.py  process.py  trim.py
src/soccer_vision/clips/: extract.py  halo.py  reels.py  trim.py
src/soccer_vision/detection/: ball.py  field_filter.py  rfdetr.py
src/soccer_vision/events/: associate.py  deadball.py  labels.py  phases.py  select.py  set_piece.py  sources.py  spotting.py
src/soccer_vision/harvest/: __init__.py  manifest.py  queries.py  youtube.py
src/soccer_vision/identify/: __init__.py  jersey_ocr.py  resolve.py  vote.py
src/soccer_vision/io/: osl.py  project.py  video.py
src/soccer_vision/metrics/: distance.py  heatmap.py  possession.py  shots.py
src/soccer_vision/profiles/: loader.py
src/soccer_vision/registration/: hough.py  kpsfr.py  sn_calib.py
src/soccer_vision/store/: db.py  schema.sql
src/soccer_vision/tracking/: ball_kalman.py  bytetrack.py  gamestate.py  sam3.py  teams.py
src/soccer_vision/verify/: claude.py  sheets.py  soccerchat.py
tests/: test_associate.py  test_ball_kalman.py  test_deadball.py  test_extract.py  test_halo.py  test_harvest.py  test_identify_resolve.py  test_jersey_ocr.py  test_jersey_vote.py  test_label_studio.py  test_osl.py  test_possession.py  test_set_piece.py  test_soccerchat.py  test_sources.py  test_teams.py  test_video_io.py  test_virtual_cam.py
tests/results/: rfdetr_sample_match_a_log.json
training/: BALL_ACTION_SPOTTING.md  FOOTPASS.md  FOOTPASS_vs_soccerchat.md  README.md
training/slurm/: run_pipeline.sbatch  soccerchat_describe.sbatch  train_action_spotting.sbatch  train_calibration.sbatch  train_footpass_taad.sbatch
training/sn_calib/: train.py  train_calibration.py
training/sn_spotting/: train_action_spotting.py  train_teamspotting.py
