[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soccer-vision"
version = "0.1.0"
description = "Open-source soccer video analysis toolkit"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
  "opencv-python>=4.8",
  "numpy>=1.24",
  "rfdetr>=1.8",
  "torch>=2.2",
  "torchvision>=0.17",
  "supervision>=0.25",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "anthropic>=0.40",
  "gdown>=6.1.0",
]

[project.optional-dependencies]
gpu = ["inference[gpu]"]
gui = ["pyside6>=6.6", "supervision[desktop]"]
broadcast = ["tracklab"]
train = ["lightning", "SoccerNet>=0.1.56"]
# SoccerChat local VLM: Qwen2-VL-7B + LoRA loaded via transformers + peft.
# GPU strongly recommended. transformers >=5.1 to stay compatible with the
# base rfdetr dependency (which requires transformers>=5.1,<6).
soccerchat = [
  "transformers>=5.1,<6",
  "peft>=0.13",
  "accelerate>=0.34",
  "qwen-vl-utils",
  "decord",
  "av",
]
# Label Studio annotation UI + Python SDK for pushing pre-filled review projects.
annotate = ["label-studio>=1.13", "label-studio-sdk>=1.0"]
# Harvest CC-BY youth-soccer clips from YouTube (needs ffmpeg on PATH too).
harvest = ["yt-dlp>=2024.8"]
# Jersey-number recognition (individual-player pathway). PARSeq scene-text
# recognizer loaded via torch.hub; a jersey-fine-tuned checkpoint can override it.
identify = ["timm>=0.9", "pytorch-lightning>=2.0", "nltk", "pillow"]
dev = ["pytest", "ruff", "sphinx"]

[project.scripts]
soccer-vision = "soccer_vision.cli.main:main"

[tool.uv]
# These heavy extras pin mutually incompatible versions of numpy / anthropic /
# supervision (e.g. inference[gpu] wants numpy<2.4 + old anthropic, while
# label-studio and ms-swift want newer). Declaring them as conflicting lets uv
# resolve the lock by forking instead of failing on an unsatisfiable universe.
# Install at most one of these per environment.
conflicts = [
  [
    { extra = "gpu" },
    { extra = "annotate" },
    { extra = "soccerchat" },
    { extra = "broadcast" },
  ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/soccer_vision"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
